<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:text="@string/enter_todo"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/popup_title"
       android:hint="@string/enter_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/popup_description"
        android:hint="@string/enter_description"
        android:textSize="17sp"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/popup_button"
        android:text="Save"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:background="@android:color/holo_red_dark"
        android:layout_height="wrap_content"
        />



</LinearLayout>