<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="wrap_content">
   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <RelativeLayout
           android:padding="23dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:id="@+id/question_text"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_centerHorizontal="true"
               android:text="@string/question_text"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <Button
               android:id="@+id/no_button"
               android:text="@string/no"
               android:layout_margin="10dp"
               android:textColor="@android:color/white"
               android:background="@color/colorPrimary"
               android:layout_below="@+id/question_text"
               android:layout_width="wrap_content"
               android:layout_height="40dp"/>
           <Button
               android:id="@+id/yes_button"
               android:text="@string/yes"
               android:layout_margin="10dp"
               android:textColor="@android:color/white"
               android:background="@color/colorPrimary"
               android:layout_alignParentEnd="true"
               android:layout_below="@+id/question_text"
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:layout_alignParentRight="true" />

       </RelativeLayout>
   </androidx.cardview.widget.CardView>


</LinearLayout>